tests/lean/meta_equation_pos.lean.expected.out
meta_equation_pos.lean:2:0: error: equation type mismatch, expression
  tt
has type
  bool
but is expected to have type
  ℕ
meta_equation_pos.lean:1:9: warning: declaration 'f' uses sorry
ℕ : Type
